--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-    "authToken": "123456:ABC-DEF1234ghIkl-zyx57W2v1u123ew11",
-    "owner": 34509246
+    "authToken": "1543457812:AAGvMTiB89lXToAH7T8PZnW0W-VMteIllug",
+    "owner": 622597525
 }
